[gd_scene load_steps=31 format=2]

[ext_resource path="res://OnFootAssets/Enemies/BlueOrb/FullBlue.png" type="Texture" id=1]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://OnFootAssets/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://OnFootAssets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://OnFootAssets/Hitboxes-Hurtboxes/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://OnFootAssets/Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://OnFootAssets/Enemies/BlueOrb/BlueOrb.gd" type="Script" id=8]
[ext_resource path="res://OnFootAssets/Enemies/BlueOrb/Sprite0.gd" type="Script" id=9]
[ext_resource path="res://OnFootAssets/Assets/noiseTexture.png" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D dissolve_texture : hint_albedo;
uniform float dissolve_value : hint_range(0,1);

void fragment(){
    vec4 main_texture = texture(TEXTURE, UV);
    vec4 noise_texture = texture(dissolve_texture, UV);
    main_texture.a *= floor(dissolve_value + min(1, noise_texture.x));
    COLOR = main_texture;
}"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 1 )
shader_param/dissolve_value = 1.0
shader_param/dissolve_texture = ExtResource( 10 )

[sub_resource type="Animation" id=18]
resource_name = "Harvest"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "completed_harvest"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:material:shader_param/dissolve_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.75, 0.25 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11 ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveLeft"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=7]
resource_name = "MoveRight"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite0:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite0:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite0:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite0:material:shader_param/dissolve_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="CapsuleShape2D" id=20]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id=3]
radius = 188.043

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.49995
height = 15.0001

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0
height = 2.0

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=12]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Idle/node = SubResource( 13 )
states/Idle/position = Vector2( 582, 66 )
states/Move/node = SubResource( 12 )
states/Move/position = Vector2( 320, 66 )
transitions = [ "Move", "Idle", SubResource( 14 ), "Idle", "Move", SubResource( 15 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="BlueOrb" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 16
script = ExtResource( 8 )
map_size = 200

[node name="Sprite0" type="Sprite" parent="."]
material = SubResource( 19 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 21
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0"]

[node name="Sprite1" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite1"]

[node name="Sprite2" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite2"]

[node name="Sprite3" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite3"]

[node name="Sprite4" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite4"]

[node name="Sprite5" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite5"]

[node name="Sprite6" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite6"]

[node name="Sprite7" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite7"]

[node name="Sprite8" type="Sprite" parent="Sprite0"]
use_parent_material = true
texture = ExtResource( 1 )
hframes = 21
frame = 8
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="Sprite0/Sprite8"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Harvest = SubResource( 18 )
anims/Idle = SubResource( 9 )
anims/MoveLeft = SubResource( 6 )
anims/MoveRight = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 20 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
harvest_duration = 2.0
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="DetectionArea" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -4.76837e-07, 0 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
visible = false

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/Move/blend_position = Vector2( 0, 0 )

[node name="blueAudio" type="AudioStreamPlayer2D" parent="."]
max_distance = 150.0
bus = "SoundEffects"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="frame_changed" from="Sprite0" to="Sprite0" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite1" to="Sprite0/Sprite1" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite2" to="Sprite0/Sprite2" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite3" to="Sprite0/Sprite3" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite4" to="Sprite0/Sprite4" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite5" to="Sprite0/Sprite5" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite6" to="Sprite0/Sprite6" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite7" to="Sprite0/Sprite7" method="_on_Sprite0_frame_changed"]
[connection signal="frame_changed" from="Sprite0/Sprite8" to="Sprite0/Sprite8" method="_on_Sprite0_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="damage_dealt" from="Hitbox" to="." method="_on_Hitbox_damage_dealt"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
